# Genesis-Rebuild

./: .AGENT_PROJECT_MAPPING.md.swp  .CLAUDE.md.swp  .codacy.yml  .coverage  .dockerignore  .env  .env.backup.20251024_213259  .env.backup.20251027_182601  .env.example  .env.genesis.secrets  .env.local.example  .env.local.vertex.example  .env.passwords  .env.production.local.example  .gitignore  .gitmodules  .pre-commit-config.yaml  2025-11-16-this-session-is-being-continued-from-a-previous-co.txt  6_SYSTEM_INTEGRATION_COMPLETE.md  =13.0  A2A_AGENT_CARDS_FIX_SUMMARY.md  A2A_AGENT_CARDS_QUICK_START.md  A2A_FIX_SUMMARY.md  A2A_SERVICE_README.md  A2A_STABILITY_FIX_DELIVERABLES.md  ACTIVATE_ALL_SYSTEMS.sh  ADP_WEEK2_QUICK_START.md  AGENTEVOLVER_DEEPEYESV2_COMPLETE.md  AGENTEVOLVER_INTEGRATION_SUMMARY.txt  AGENTEVOLVER_PHASE3_INTEGRATION.md  AGENTEVOLVER_QUICK_REF.md  AGENTS_9-17_INTEGRATION_DEPLOYMENT_REPORT.md  AGENTS_9-17_UPGRADE_REPORT.md  AGENTS_FIXED_COMPLETE.md  AGENT_BRIEFING.md  AGENT_CREATION_ANALYSIS.md  AGENT_ENHANCEMENT_GUIDE.md  AGENT_ENHANCEMENT_REPORT.md  AGENT_FIX_PLAN.md  AGENT_INTEGRATION_UPGRADE_REPORT.md  (+559 more)
.claude/: AUDIT_PROTOCOL_V2.md
.github/: CODEOWNERS  copilot-instructions.md
.pipelex/: config.toml
.policy_cards/: analyst_agent.yaml  builder_agent.yaml  content_agent.yaml  deploy_agent.yaml  email_agent.yaml  genesis_orchestrator.yaml  legal_agent.yaml  marketing_agent.yaml  orchestration_agent.yaml  qa_agent.yaml  reflection_agent.yaml  research_agent.yaml  se_darwin_agent.yaml  security_agent.yaml  spec_agent.yaml  support_agent.yaml
agents/: __init__.py  agentscope_alias_agent.py  agentscope_runtime_agent.py  analyst_agent.py  analytics_agent.py  api_design_agent.py  architecture_agent.py  auth0_integration_agent.py  backend_agent.py  billing_agent.py  builder_agent.py  builder_agent_context_integration.txt  business_generation_agent.py  code_review_agent.py  commerce_agent.py  content_agent.py  content_creation_agent.py  darwin_agent.py  data_juicer_agent.py  database_design_agent.py  deploy_agent.py  documentation_agent.py  domain_agent.py  email_agent.py  email_marketing_agent.py  finance_agent.py  frontend_agent.py  gemini_computer_use_agent.py  legal_agent.py  llm_judge_rl_agent.py  marketing_agent.py  marketing_agent_multimodal.py  monitoring_agent.py  pricing_agent.py  qa_agent.py  react_training_agent.py  reflection_agent.py  research_discovery_agent.py  se_darwin_agent.py  se_darwin_agent.py.backup  (+8 more)
api/: __init__.py
audits/: AGENTEVOLVER_PHASE2_EXECUTIVE_SUMMARY.md  ALEX_WORK_AUDIT_REPORT.md  AUDIT_COMPLETE.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_SUMMARY.md  CLAUDE_AUDIT_BEN.md  COMPLETION_REPORT.md  CORA_AP2_QUICK_REFERENCE.md  CORA_AUDIT_AGENTEVOLVER_PHASE2.md  CORA_AUDIT_AP2_SECTIONS_4_5.md  CORA_AUDIT_NOVA.md  CORA_AUDIT_NOVA_AP2.md  CORA_AUDIT_NOVA_AP2_EXPANSION.md  CORA_AUDIT_NOVA_QUICK_SUMMARY.md  CORA_AUDIT_SUMMARY.md  CORA_DISCORD_AUDIT_FINAL_REPORT.md  CORA_INTEGRATION_AUDIT_REPORT.md  DEEPEYESV2_AUDIT_REPORT.md  DEEPEYESV2_QUICK_REFERENCE.txt  DISCORD_FIXES_IMPLEMENTATION.md  DISCORD_INTEGRATION_AUDIT_REPORT.md  DISCORD_PHASES_5_7_AUDIT_REPORT.md  EXECUTIVE_SUMMARY_SECTIONS_1-3.md  FINAL_AUDIT_REPORT_INTEGRATION_PLAN.md  HUDSON_AGENTEVOLVER_DEEPEYESV2_AUDIT.md  HUDSON_AGENTEVOLVER_EXEC_SUMMARY.md  HUDSON_AGENTEVOLVER_QUICK_REF.md  HUDSON_AP2_EXECUTIVE_SUMMARY.txt  HUDSON_AP2_FINAL_SUMMARY.txt  HUDSON_AP2_ISSUES_LOG.md  HUDSON_AP2_QUICK_REFERENCE.md  HUDSON_AP2_QUICK_SUMMARY.md  HUDSON_AUDIT_AGENTEVOLVER_PHASE2.md  HUDSON_AUDIT_AP2_SECTIONS_1_3.md  HUDSON_AUDIT_QUICK_REFERENCE.md  HUDSON_AUDIT_SHANE.md  HUDSON_AUDIT_SHANE_AP2.md  HUDSON_AUDIT_SHANE_AP2_EXPANSION.md  HUDSON_AUDIT_SUMMARY.md  HUDSON_CHANGES_SUMMARY.txt  (+34 more)
backups/: api_contracts_staging_20251030_182751.backup
benchmark_results/: fp16_vs_fp32_results.csv
benchmarks/: BENCHMARK_SCENARIOS_COMPLETION_REPORT.md  README.md  VISION_MODEL_BENCHMARK_RESULTS.md  VISION_MODEL_COMPARISON_EXECUTIVE_SUMMARY.md  __init__.py  agent_benchmarks.py  expand_scenarios.py  fp16_comprehensive_report.txt  fp16_comprehensive_results.csv  fp16_vs_fp32_results.csv  sglang_throughput.py  vision_model_comparison.py  vision_model_comparison_lite.py
config/: a2a_staging.yml  agent_payment_limits.json  agentevolver_production.yaml  api_contracts_staging.yaml  deployment_state.json  feature_flags.json  local_llm_config.yml  mongodb_config.yml  omnidaemon.yaml  production.env.example  production.yml  staging.yml  visual_compression_config.yml
dashboard/: api.py  app.py  genesis_events.db  metrics_collector.py
data/: audit_policies.json  cost_tracking.csv  creative_assets_registry.json  research_rubrics_sample.json  retrieval_validation.jsonl  retrieval_validation_schema.json
deploy/: omnidaemon-genesis.service
docs/: 2DAY_DEPLOYMENT_COMPLETION_REPORT.md  2DAY_DEPLOYMENT_RUNBOOK.md  2DAY_DEPLOYMENT_SUMMARY.md  48_HOUR_MONITORING_ASSIGNMENT.md  48_HOUR_MONITORING_PROTOCOL.md  48_HOUR_MONITORING_READY.md  A2A_ADVANCED_TEST_COVERAGE.md  A2A_AUDIT_FINAL_SUMMARY.md  A2A_CODE_COMPARISON.md  A2A_ENDPOINT_FIX_REPORT.md  A2A_HTTPS_CONFIGURATION.md  A2A_INTEGRATION_COMPLETE.md  A2A_ORCHESTRATION_INTEGRATION.md  A2A_SECURITY_IMPLEMENTATION.md  A2A_SERVICE_STABILITY_FIX.md  A2A_STABILITY_VERIFICATION_REPORT.md  A2A_STAGING_DEPLOYMENT_COMPLETE.md  A2A_TEST_FIX_VALIDATION.md  ADP_CASEBANK_MAPPING.md  ADP_CONVERSION_STRATEGY.md  ADP_CROSS_AGENT_LEARNING_MATRIX.md  ADP_FORMAT_SPECIFICATION.md  ADP_PIPELINE_USAGE_GUIDE.md  ADP_RESEARCH_REPORT.md  ADP_WEEK2_COMPLETE_SUMMARY.md  AGENTFLOW_SETUP_COMPLETE.md  AGENT_API_REFERENCE.md  AGENT_FLAN_INTEGRATION_COMPLETE.md  AGENT_S_INTEGRATION_PLAN.md  (+406 more)
(+10016 files in other folders)
