# Genesis Rebuild - Python Project Configuration
# This file contains configuration for various Python tools

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-rebuild"
version = "1.0.0"
description = "Recursive multi-agent AI system for autonomous business creation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Genesis Team", email = "genesis@example.com"}
]
keywords = ["ai", "agents", "orchestration", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "networkx>=3.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-rerunfailures>=13.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "fastapi",
    "uvicorn[standard]",
]

[tool.setuptools]
# Explicitly define packages to include (fix flat-layout discovery error)
packages = ["agents", "infrastructure", "businesses", "config", "monitoring"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yml", "*.yaml"]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "isort>=5.13.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-benchmark>=4.0.0",
    "pre-commit>=3.6.0",
]

test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-benchmark>=4.0.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

openenv = [
    "playwright>=1.40.0",
    "supabase>=2.0.0",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | SE-Agent
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "SE-Agent",
]

# Ruff configuration (fast linter)
[tool.ruff]
line-length = 100
target-version = "py312"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "htmlcov",
    "SE-Agent",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict parameter
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["S101"]      # assert statements in tests

# mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

# Exclude directories
exclude = [
    'venv',
    '.venv',
    'SE-Agent',
]

# Bandit configuration (security linting)
[tool.bandit]
targets = ["."]
exclude_dirs = [
    "/tests",
    "/venv",
    "/.venv",
    "/SE-Agent",
]
skips = [
    "B101",  # assert_used (we use asserts in tests)
    "B601",  # paramiko_calls (if we use paramiko)
]

# Security level
severity = "medium"
confidence = "medium"

# pytest configuration (basic - full config in pytest.ini)
# NOTE: Plugins (asyncio, rerunfailures) are ENABLED by default when installed
#       Markers registered in pytest.ini for graceful fallback when missing
#       Use SANDBOX_MODE=1 environment variable to disable plugins if needed
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/SE-Agent/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Interrogate configuration (docstring coverage)
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
fail-under = 60
exclude = ["venv", ".venv", "tests", "SE-Agent"]
verbose = 1
color = true
